# repo-of-knowledge

./: .gitignore
C++/hello_world/headers/: HelloWorld.h
C++/hello_world/sources/: HelloWorld.cpp
C++/networking/: BasicUdpTest.cpp  CMakeLists.txt  MainUdpClient.cpp  MainUdpNode.cpp  MainUdpServer.cpp  MainUdpTest.cpp  README.txt  UdpSendReceive.cpp
C++/networking/sources/: Buffer.cpp  Buffer.h  SocketAddress.cpp  SocketAddress.h  UdpBase.cpp  UdpBase.h  UdpClient.cpp  UdpClient.h  UdpServer.cpp  UdpServer.h  UdpSocket.cpp
C++/networking/sources/interface/: Message.h  MessageType.h  Serializer.h
C++/networking/sources/protocol/: Message.h
C++/networking/sources/udp/: UdpClient.cpp  UdpClient.h  UdpNode.cpp  UdpNode.h  UdpServer.cpp  UdpServer.h  UdpSocket.cpp  UdpSocket.h
C++/networking/sources/utilities/: Buffer.cpp  Buffer.h  PacketQueue.cpp  PacketQueue.h
C++/physics_engine/: Main.cpp
C++/physics_engine/headers/: PhysicsObject.h  Window.h
C++/physics_engine/sources/: Window.cpp
ROS/programming_robots_with_ros/: package.xml
ROS/programming_robots_with_ros/scripts/: doubler.py  message_publisher.py  message_subscriber.py  service_server.py  simple_action_server.py  topic_subscriber.py
ROS/ros_tutorials/costum_msg/action/: Timer.action
ROS/ros_tutorials/costum_msg/srv/: WordCount.srv  add_two_ints.srv
arduino/attitude_estimator/: platformio.ini
arduino/attitude_estimator/include/: AttitudeEstimator.h
arduino/attitude_estimator/src/: AttitudeEstimator.cpp  attitude_estimator.code-workspace  main.cpp
arduino/test_stepper_motor/: test_stepper_motor.ino
costum_msg/: CMakeLists.txt  package.xml
programming_robots_with_ros/: CMakeLists.txt  package.xml
programming_robots_with_ros/scripts/: fancy_action_client.py  fancy_action_server.py  message_publisher.py  service_client.py  simple_action_client.py  topic_publisher.py  topic_subscriber.py
ros_tutorials/: CMakeLists.txt  package.xml
ros_tutorials/scripts/: add_two_ints_client.py  add_two_ints_server.py  listener.py  talker.py
vortex_lectures/: CMakeLists.txt  package.xml
vortex_lectures/launch/: dynamic.launch  frames.launch
vortex_lectures/scripts/: dynamic_transform_publisher.py
